--- a/index.html
+++ b/index.html
@@ -5,31 +5,45 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Product Cards</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+
+		<!-- font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Montserrat:wght@500;600;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="preview-card">
-			<div class="preview-card-img" role="image"></div>
-			<div class="preview-card-content">
-				<p class="previw-card-sub-heading">perfume</p>
-				<h2 class="preview-card-heading">Gabrielle Essence Eau De Parfum</h2>
-				<p class="preview-card-text">
-					A floral, solar and voluptuous interpretation composed by Olivier
-					Polge, Perfume-Creator for the House of CHANEL
-				</p>
+		<div class="container">
+			<div class="preview-card">
+				<div class="preview-card-img" role="image"></div>
+				<div class="preview-card-content">
+					<p class="previw-card-sub-heading">perfume</p>
+					<h2 class="preview-card-heading">Gabrielle Essence Eau De Parfum</h2>
+					<p class="preview-card-text">
+						A floral, solar and voluptuous interpretation composed by Olivier
+						Polge, Perfume-Creator for the House of CHANEL
+					</p>
 
-				<p class="preview-card-price">
-					<span>$149.99</span>
-					<span>$169.99</span>
-				</p>
+					<p class="preview-card-price">
+						<span>$149.99</span>
+						<span>$169.99</span>
+					</p>
 
-				<button class="preview-card-button">Add to Cart</button>
+					<button class="preview-card-button">
+						<i class="fas fa-shopping-cart"></i>
+						<span>Add to Cart</span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</body>
